apps/kyverno-policies/base/require-s3-tags.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-s3-tags
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: check-s3-tags
      match:
        any:
          - resources:
              kinds:
                - Bucket
              apiGroups:
                - s3.aws.crossplane.io
      validate:
        message: "Tous les S3 Buckets doivent avoir au moins un tag défini."
        pattern:
          spec:
            forProvider:
              tagging:
                tagSet:
                  - key: "?*"
                    value: "?*"
